--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "cryptocurrency_bot",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/app.js",
+  "main": "src/app.ts",
   "scripts": {
-    "start": "node dist/app.js"
+    "start": "ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -14,7 +14,8 @@
     "axios": "^0.23.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongodb": "^4.1.3"
+    "mongodb": "^4.1.3",
+    "ts-node": "^10.4.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.2.0",
