--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "prestart": "tsc",
-    "start": "node dist/index.js"
+    "build":"tsc",
+    "prestart": "npm run build",
+    "start": "node ."
   },
   "author": "",
   "license": "ISC",
