--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build":"tsc",
     "prestart": "npm run build",
-    "start": "node ."
+    "start": "node dist/app.js"
   },
   "author": "",
   "license": "ISC",
